--- a/index.html
+++ b/index.html
@@ -620,9 +620,9 @@
                 <p id="pesan7" class="gaya2">Dilancarin kerjanyaa dan semua kegiatannya</p>
 
                 <p id="pesan8" class="gaya2">Dikasih rejeki yang barokah, dan banyak biar cepet ngelamar aku :(</p>
-                <p id="pesan9" class="gaya2">test 9</p>
-                <p id="pesan10" class="gaya2">test 10</p>
-                <p id="pesan11" class="gaya2">test 11</p>
+                <p id="pesan9" class="gaya2">I just want to remind you </p>
+                <p id="pesan10" class="gaya2">I will always be there for you</p>
+                <p id="pesan11" class="gaya2">And we'll be going to meet soon..</p>
                 <p id="pesan12" class="gaya2">Semoga kita bisa bareng sampe nikah yaa❤️</p>
                 <p id="pesan13" class="gaya2">Aamiin...</p>
 
